--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,8 @@ spring:
     password: devpassword
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.yaml
+
+
+springdoc:
+  swagger-ui:
+    path: /apidocs
