--- a/.github/workflows/deploy-ecr-with-tag.yml
+++ b/.github/workflows/deploy-ecr-with-tag.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
-          arguments: build
+          arguments: build -Dliquibase.shouldRun=false
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@13d241b293754004c80624b5567555c4a39ffbe3
