--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
     password: devpassword
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.yaml
+    shouldRun: false
 
 
 springdoc:
