--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,16 +2,11 @@ app:
   version: ${APP_VERSION:-0.0.1}
 
 
-database:
-  url: x
-  username: y
-  password: z
-
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:32769/devdb
-    username: dev
-    password: devpassword
+    url: ${DB_URL:-jdbc:postgresql://localhost:32770/devdb}
+    username: ${DB_USERNAME:-dev}
+    password: ${DB_PASSWORD:-devpassword}
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.yaml
 
