--- a/k8s/env-configmap.yml
+++ b/k8s/env-configmap.yml
@@ -9,3 +9,5 @@ data:
   POSTGRES_HOST: devdb.cz2vwd1erxct.ap-southeast-1.rds.amazonaws.com
   POSTGRES_PORT: 5432
   DB_NAME: devdb
+  KAFKA_BOOSTRAP_SERVER_HOST: b-1.mykafkacluster1.do0cbs.c5.kafka.ap-southeast-1.amazonaws.com
+  KAFKA_BOOSTRAP_SERVER_PORT: 9092
