--- a/k8s/awsservices-deployment.yaml
+++ b/k8s/awsservices-deployment.yaml
@@ -32,11 +32,32 @@ spec:
             - name: http
               containerPort: 80
           env:
-            - name: DB_URL
+            - name: POSTGRES_HOST
               valueFrom:
                 configMapKeyRef:
                   name: env-configmap
-                  key: DB_URL
+                  key: POSTGRES_HOST
+
+            - name: POSTGRES_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: env-configmap
+                  key: POSTGRES_PORT
+            - name: DB_NAME
+              valueFrom:
+                configMapKeyRef:
+                  name: env-configmap
+                  key: DB_NAME
+            - name: KAFKA_BOOSTRAP_SERVER_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: env-configmap
+                  key: KAFKA_BOOSTRAP_SERVER_HOST
+            - name: KAFKA_BOOSTRAP_SERVER_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: env-configmap
+                  key: KAFKA_BOOSTRAP_SERVER_PORT
             - name: DB_USERNAME
               valueFrom:
                 secretKeyRef:
