--- a/.github/workflows/deploy-ecr-with-tag.yml
+++ b/.github/workflows/deploy-ecr-with-tag.yml
@@ -3,7 +3,7 @@
 # You can also reference a tag or branch, but the action may change without warning.
 #....
 
-name: Deploy to Amazon ECR same tag
+name: Deploy to Amazon ECR with tag
 
 on: workflow_dispatch
 
@@ -60,7 +60,7 @@ jobs:
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: 'latest'
+          IMAGE_TAG: '0.0.3'
         run: |
           # Build a docker container and
           # push it to ECR
